Modifica cancelación de citas y creación con validación de que el paciente exista
